SVY-19033 remove SmartClient code/configuration/jars
remove the Classic editors (smart and mobile)
removed preferences related to those editors