@@ -37,7 +37,6 @@ import org.osgi.service.prefs.BackingStoreException;
 import com.servoy.eclipse.core.ServoyModelManager;
 import com.servoy.eclipse.model.util.ServoyLog;
 import com.servoy.eclipse.ui.Activator;
-import com.servoy.j2db.server.shared.ApplicationServerRegistry;
 import com.servoy.j2db.util.Settings;
 import com.servoy.j2db.util.Utils;
 
@@ -57,7 +56,6 @@ public class StartupPreferences extends PreferencePage implements IWorkbenchPref
 	// stored in ui plugin prefs
 	public static final String DEBUG_CLIENT_CONFIRMATION_WHEN_ERRORS = "debugger.showConfirmationDialogWhenErrors";
 	public static final String DEBUG_CLIENT_CONFIRMATION_WHEN_WARNINGS = "debugger.showConfirmationDialogWhenWarnings";
-	public static final String STARTUP_EXTENSION_UPDATE_CHECK = "startup.checkForExtensionUpdates";
 	public static final String STARTUP_SHOW_START_PAGE = "servoy.developer.showStartPage";
 	public static boolean DEFAULT_ERROR_CONFIRMATION = true;
 	public static boolean DEFAULT_WARNING_CONFIRMATION = false;
@@ -72,7 +70,6 @@ public class StartupPreferences extends PreferencePage implements IWorkbenchPref
 	private Text settingsFileText;
 	private Button showErrorsConfirmation;
 	private Button showWarningsConfirmation;
-	private Button startupExtensionUpdateCheck;
 	private Button showStartPageCheck;
 
 	public void init(IWorkbench workbench)
@@ -119,8 +116,6 @@ public class StartupPreferences extends PreferencePage implements IWorkbenchPref
 		retriesSpinner = new Spinner(settings, SWT.BORDER);
 		retriesSpinner.setValues(0, 1, 100, 0, 1, 5);
 
-		startupExtensionUpdateCheck = new Button(others, SWT.CHECK);
-		startupExtensionUpdateCheck.setText("Check for Servoy Extension updates at startup");
 		showErrorsConfirmation = new Button(others, SWT.CHECK);
 		showErrorsConfirmation.setText("Check for error markers when launching (debug) client");
 		showWarningsConfirmation = new Button(others, SWT.CHECK);
@@ -159,13 +154,7 @@ public class StartupPreferences extends PreferencePage implements IWorkbenchPref
 		IEclipsePreferences eclipsePreferences = Activator.getDefault().getEclipsePreferences();
 		showErrorsConfirmation.setSelection(eclipsePreferences.getBoolean(DEBUG_CLIENT_CONFIRMATION_WHEN_ERRORS, DEFAULT_ERROR_CONFIRMATION));
 		showWarningsConfirmation.setSelection(eclipsePreferences.getBoolean(DEBUG_CLIENT_CONFIRMATION_WHEN_WARNINGS, DEFAULT_WARNING_CONFIRMATION));
-		startupExtensionUpdateCheck.setSelection(eclipsePreferences.getBoolean(STARTUP_EXTENSION_UPDATE_CHECK, DEFAULT_STARTUP_EXTENSION_UPDATE_CHECK));
 		showStartPageCheck.setSelection(Utils.getAsBoolean(Settings.getInstance().getProperty(STARTUP_SHOW_START_PAGE, "true")));
-		if (!ApplicationServerRegistry.get().hasDeveloperLicense())
-		{
-			showStartPageCheck.setEnabled(false);
-			showStartPageCheck.setSelection(true);
-		}
 	}
 
 	@Override
@@ -191,12 +180,7 @@ public class StartupPreferences extends PreferencePage implements IWorkbenchPref
 		IEclipsePreferences eclipsePreferences = Activator.getDefault().getEclipsePreferences();
 		eclipsePreferences.putBoolean(DEBUG_CLIENT_CONFIRMATION_WHEN_ERRORS, showErrorsConfirmation.getSelection());
 		eclipsePreferences.putBoolean(DEBUG_CLIENT_CONFIRMATION_WHEN_WARNINGS, showWarningsConfirmation.getSelection());
-		eclipsePreferences.putBoolean(STARTUP_EXTENSION_UPDATE_CHECK, startupExtensionUpdateCheck.getSelection());
-		Settings.getInstance().setProperty(STARTUP_SHOW_START_PAGE, new Boolean(showStartPageCheck.getSelection()).toString());
-		if (!ApplicationServerRegistry.get().hasDeveloperLicense())
-		{
-			Settings.getInstance().setProperty(STARTUP_SHOW_START_PAGE, "true");
-		}
+		Settings.getInstance().setProperty(STARTUP_SHOW_START_PAGE, Boolean.valueOf(showStartPageCheck.getSelection()).toString());
 		return true;
 	}
 
@@ -210,7 +194,6 @@ public class StartupPreferences extends PreferencePage implements IWorkbenchPref
 		settingsFileText.setText("servoy.properties");
 		retriesSpinner.setSelection(RETRIES_DEFAULT);
 
-		startupExtensionUpdateCheck.setSelection(DEFAULT_STARTUP_EXTENSION_UPDATE_CHECK);
 		showErrorsConfirmation.setSelection(DEFAULT_ERROR_CONFIRMATION);
 		showWarningsConfirmation.setSelection(DEFAULT_WARNING_CONFIRMATION);
 		showStartPageCheck.setSelection(DEFAULT_STARTUP_SHOW_START_PAGE);
